# Autoaim

./: MLP.py  README.md
READMES/: README before 2020.6.12.md  README_before_2020.3.3.md  README_before_2020.4.7.md  README_before_2020.5.10.md  README_before_2020.8.4.md  README_before_2021.4.1.md
devel/: .catkin  .rosinstall  setup.sh
devel/lib/armor/: Frame
devel/lib/pkgconfig/: armor.pc  serial_com.pc
devel/lib/python2.7/dist-packages/serial_com/msg/: _comm.py
devel/lib/serial_com/: simulator  stm_com
devel/share/armor/cmake/: armorConfig.cmake
devel/share/common-lisp/ros/serial_com/msg/: _package.lisp  _package_comm.lisp  comm.lisp  serial_com-msg.asd
devel/share/gennodejs/ros/serial_com/msg/: _index.js  comm.js
devel/share/roseus/ros/serial_com/: manifest.l
devel/share/roseus/ros/serial_com/msg/: comm.l
devel/share/serial_com/cmake/: serial_com-msg-paths.cmake  serial_comConfig.cmake
model/: knn.xml  pca.xml  traced_model.pt
src/: replace.sh
src/armor/: CMakeLists.txt  Frame.cc
src/armor/config/: aim_deps_config.yaml  bullet_17.yaml  bullet_42.yaml
src/armor/include/: readParam.hpp
src/armor/include/Sentrydecision/: SentryDecision.hpp
src/armor/include/aim_cam/: CameraCtl.hpp  CameraParam.hpp  HPG.hpp
src/armor/include/aim_dec/: Armordecision.hpp
src/armor/include/aim_deps/: AimBase.hpp  AimDeps.hpp  AimRos.hpp  Paths.hpp
src/armor/include/aim_energy/: WM_Param.hpp  WindMill.hpp
src/armor/include/aim_pos/: GetPos.hpp
src/armor/include/aim_pre/: Predict.hpp
src/armor/include/aim_rec/: NumRec.hpp
src/armor/include/distance/: AimDistance.hpp  ArmorPlate.hpp  ErrorTerm.hpp  LightMatch.hpp
src/armor/include/vicinity/: AimVicinity.hpp  Detective.hpp
src/armor/launch/: hero.launch  infantry.launch  test.launch
src/armor/src/Sentrydecision/: SentryDecision.cc
src/armor/src/aim_cam/: CameraCtl.cc  HPG.cc
src/armor/src/aim_dec/: Armordecision.cc
src/armor/src/aim_deps/: AimBase.cc  AimDeps.cc  Paths.cc
src/armor/src/aim_energy/: clear.cc  getcontours.cc  hit.cc  hitfind.cc  init.cc  judgedirection.cc  pre.cc  validfind.cc
src/armor/src/aim_pos/: GetPos.cc
src/armor/src/aim_pre/: Predict.cc
src/armor/src/aim_rec/: NumRec.cc
src/armor/src/distance/: AimDistance.cc  ArmorPlate.cc  LightMatch.cc
src/armor/src/vicinity/: AimVicinity.cc  Detective.cc
src/serial_com/: CMakeLists.txt  simulator.cc  stm_com.cc
src/serial_com/include/serial_com/: SerialCom.hpp  Simulate.hpp  comm.h  detect.h
src/serial_com/msg/: comm.msg
src/serial_com/src/: SerialCom.cc  Simulate.cc
